// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component  1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 1cx0eeq-1q64x7k"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fhf2c8-hnqgw2 fhf2c8-58zsu5 fhf2c8-1qr77c8 fhf2c8-mjo3f8 1cx0eeq-1q64x7k"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij fhf2c8-1eydhex fhf2c8-7s6zs0 fhf2c8-14oe7p6 fhf2c8-11hczkh 1cx0eeq-1q64x7k"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component Button disabled 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 1cx0eeq-1q64x7k"
          dir={null}
        >
          <div
            aria-disabled={true}
            className="css-view-175oi2r r-pointerEvents-633pao"
            data-style="fhf2c8-hnqgw2 fhf2c8-58zsu5 fhf2c8-1qr77c8 fhf2c8-mjo3f8 1cx0eeq-1q64x7k"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="-1"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij fhf2c8-1eydhex fhf2c8-7s6zs0 fhf2c8-14oe7p6 fhf2c8-11hczkh 1cx0eeq-1q64x7k"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component Button hovered 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 1cx0eeq-1q64x7k"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fhf2c8-hnqgw2 fhf2c8-58zsu5 fhf2c8-1qr77c8 fhf2c8-mjo3f8 1cx0eeq-1q64x7k"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij fhf2c8-1eydhex fhf2c8-7s6zs0 fhf2c8-14oe7p6 fhf2c8-11hczkh 1cx0eeq-1q64x7k"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component matches snapshot 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 1cx0eeq-1q64x7k"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fhf2c8-hnqgw2 fhf2c8-58zsu5 fhf2c8-1qr77c8 fhf2c8-mjo3f8 1cx0eeq-1q64x7k"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij fhf2c8-1eydhex fhf2c8-7s6zs0 fhf2c8-14oe7p6 fhf2c8-11hczkh 1cx0eeq-1q64x7k"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component should press button 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1yqt7l4-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 1cx0eeq-1q64x7k"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fhf2c8-hnqgw2 fhf2c8-58zsu5 fhf2c8-1qr77c8 fhf2c8-mjo3f8 1cx0eeq-1q64x7k"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij fhf2c8-1eydhex fhf2c8-7s6zs0 fhf2c8-14oe7p6 fhf2c8-11hczkh 1cx0eeq-1q64x7k"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
